applications/software/home1/mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqtt
spec:
  selector:
    app.kubernetes.io/name: mosquitto
  ports:
  - protocol: TCP
    port: 1883
    targetPort: 1883
  type: ClusterIP
