applications/software/home1/mqtt/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mqtt
spec:
  parentRefs:
  - group: gateway.networking.x-k8s.io
    kind: XListenerSet
    name: mqtt-listeners
    sectionName: mqtt
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: mqtt
      port: 1883
      weight: 1
